--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
         <img src="./images/Rectangle 4.png" alt="#">
       </div>
       <div class="next-png">
-        <img src="./images/services__next.png" alt="">
+        <img src="./images/Arrow.png" alt="#">
       </div>
+      <p class="next">след</p>
       <div class="back-png">
-        <img src="./images/services__back.png" alt="">
+        <img src="./images/Arrow (1).png" alt="#">
       </div>
+      <p class="back">Назад</p>
     </div>
   </section>
 
@@ -189,7 +191,7 @@
       </div>
     </div>
   </section>
-  <div class="map"></div>
+  <div class="map"><div style="position:relative;overflow:hidden;"><a href="https://yandex.uz/maps/10335/tashkent/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Ташкент</a><a href="https://yandex.uz/maps/10335/tashkent/?ll=69.279737%2C41.311151&utm_medium=mapframe&utm_source=maps&z=12" style="color:#eee;font-size:12px;position:absolute;top:14px;">Ташкент — Яндекс Карты</a><iframe src="https://yandex.uz/map-widget/v1/?ll=69.279737%2C41.311151&z=12" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div></div>
 
   <div class="footer">
     <div class="container">
